--- a/app/assets/stylesheets/application/base/variables.css.scss
+++ b/app/assets/stylesheets/application/base/variables.css.scss
@@ -1,10 +1,11 @@
 // VARS
-$btnBorderRadius   : 7px;
-$inputsWidth       : 270px;
-$bigInputsWidth    : 466px;
-$middleInputsWidth : 380px;
-$containerWidth    : 1168px;
-$catalogImageWidth : 268px;
+$btnBorderRadius     : 7px;
+$inputsWidth         : 270px;
+$bigInputsWidth      : 466px;
+$middleInputsWidth   : 380px;
+$containerWidth      : 1168px;
+$catalogImageWidth   : 268px;
+$quantityInputsWidth : 35px;
 
 $userProfileLeftMenyWidth: 250px;
 
