--- a/app/assets/stylesheets/application/global/form.css.scss
+++ b/app/assets/stylesheets/application/global/form.css.scss
@@ -27,6 +27,9 @@
     &.middle {
       width: $middleInputsWidth;
     }
+    &.quantity {
+      width: $quantityInputsWidth;
+    }
   }
 
   input[type="submit"] {
