--- a/app/views/products/includes/_single_product.html.haml
+++ b/app/views/products/includes/_single_product.html.haml
@@ -13,7 +13,7 @@
     .b-commerce
       %ul.single-product{ class: main_class }
         %li
-          = button_to carts_products_path(product_id: resource.id), class: 'btn add-to-cart single-product' do
+          = button_to line_items_path(product_id: product.id), class: 'btn add-to-cart single-product' do
             %i.icon.icon-add-to-cart
             = t('add_to_cart')
         %li
