--- a/app/assets/stylesheets/application/base/variables.css.scss
+++ b/app/assets/stylesheets/application/base/variables.css.scss
@@ -31,6 +31,7 @@ $smokyWhite            : #efefef;
 $veryPaleBlue          : #d1d2d3;
 $smokyWhite            : #ebebeb;
 $addToCart             : #3d9ca8;
+$dustyBlue             : #d0e3f1;
 
 $btnBorderColor        : #898989;
 
