--- a/app/assets/stylesheets/application/base/helpers.css.scss
+++ b/app/assets/stylesheets/application/base/helpers.css.scss
@@ -49,7 +49,7 @@ ul.menu {
   &.add-to-cart {
     @include border-radius(5px);
     @include box-sizing(border-box);
-    @include box-shadow(inset 2px 2px 0 0 rgba(139, 196, 203, 0.4));;
+    @include box-shadow(inset 2px 2px 0 0 rgba(139, 196, 203, 0.4));
     background-color: $addToCart;
     border: 1px solid $btnBorderColor;
     color: $white;
