--- a/app/assets/stylesheets/application/blocks/pagination.css.scss
+++ b/app/assets/stylesheets/application/blocks/pagination.css.scss
@@ -1,7 +1,7 @@
 .b-pagination {
   ul {
     li {
-      display: inline-block;
+      @include inline-block();
       background-color: $smokyWhite;
       a {
         padding: 0 10px;
