--- a/app/assets/stylesheets/application/blocks/product/review_new.css.scss
+++ b/app/assets/stylesheets/application/blocks/product/review_new.css.scss
@@ -17,7 +17,7 @@
         font-size: 12px;
         display: block;
         &.required {
-          display: inline;
+          @include inline-block();
           color: $moderateReddishOrange;
         }
       }
