--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -8,7 +8,10 @@
       = price_with_discount(resource)
       .b-product-ratable-with-reviews
         .ratable.read_only{ data: { score: resource.average_score } }
-        = link_to t('views.product.reviews_count', count: resource.published_reviews_count), '#', class: 'reviews-count'
+        = link_to t('views.product.reviews_count',
+          count: resource.published_reviews_count),
+          product_path(resource, anchor: 'reviews'),
+          class: 'reviews-count'
 
       = render 'products/includes/stores', stores: @stores, product: resource if @stores.present?
 
