--- a/app/assets/stylesheets/application/blocks/user_profile.css.scss
+++ b/app/assets/stylesheets/application/blocks/user_profile.css.scss
@@ -34,5 +34,11 @@
   }
   .b-user-settings-content {
     width: $containerWidth - $userProfileLeftMenyWidth;
+    h4 {
+      margin-top: 0;
+    }
+    .sybscription-types-list {
+      @include inline-block();
+    }
   }
 }
