--- a/app/assets/stylesheets/application/global/form.css.scss
+++ b/app/assets/stylesheets/application/global/form.css.scss
@@ -3,6 +3,7 @@
     display: block;
     margin-bottom: 3px;
     font-size: 16px;
+    cursor: pointer;
     &.required {
       &:after {
         content: '\002A';
