--- a/app/assets/stylesheets/application/global/form.css.scss
+++ b/app/assets/stylesheets/application/global/form.css.scss
@@ -34,6 +34,10 @@
     }
   }
 
+  input[type="hidden"] {
+    width: $inputsWidth;
+  }
+
   input[type="submit"] {
     @extend .btn;
     @extend .btn-pink;
