--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,7 @@
 
     = favicon_link_tag 'favicon.png', type: 'image/png'
     = csrf_meta_tags
+    = include_gon(init: true)
 
     <!--[if lt IE 9]><!-->
     = javascript_include_tag 'html5shiv-printshiv'
