--- a/app/assets/stylesheets/application/main.css.scss
+++ b/app/assets/stylesheets/application/main.css.scss
@@ -21,13 +21,13 @@
 @import "blocks/product/single_product";
 @import "blocks/product/retable_with_reviews";
 @import "blocks/commerce";
+@import "blocks/filters";
 
 @import "blocks/welcome";
 @import "blocks/news";
 @import "blocks/product";
 @import "blocks/sessions";
 @import "blocks/review";
-@import "blocks/product_category";
 @import "blocks/simple_captcha";
 @import "blocks/user_profile";
 @import "blocks/user_watched";
