feature: Additional options for product on admin and product page

--- a/app/assets/stylesheets/application/base/variables.css.scss
+++ b/app/assets/stylesheets/application/base/variables.css.scss
@@ -6,6 +6,7 @@ $middleInputsWidth   : 380px;
 $containerWidth      : 1168px;
 $catalogImageWidth   : 268px;
 $quantityInputsWidth : 35px;
+$productMiddleWidth  : 265px;
 
 $userProfileLeftMenyWidth: 250px;
 
@@ -32,6 +33,7 @@ $veryPaleBlue          : #d1d2d3;
 $smokyWhite            : #ebebeb;
 $addToCart             : #3d9ca8;
 $dustyBlue             : #d0e3f1;
+$paleBlue              : #c8c8c9;
 
 $btnBorderColor        : #898989;
 
