--- a/app/assets/stylesheets/application/main.css.scss
+++ b/app/assets/stylesheets/application/main.css.scss
@@ -20,6 +20,7 @@
 
 @import "blocks/product/single_product";
 @import "blocks/product/retable_with_reviews";
+@import "blocks/product/additional_options";
 @import "blocks/commerce";
 @import "blocks/filters";
 
