--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,19 +1,39 @@
 .b-product
-  %h3= resource.title
+  %h3
+    %span.default.product-title
+      - if @product_new_values.present? && @product_new_values.with_title.any?
+        = @product_new_values.with_title.first.new_value
+      - else
+        = resource.title
 
   .b-product-top-information
-    = render 'products/includes/image_gallery_show_product_page', resource: resource if resource.photos.any?
+    - if @additional_option_value.present? && @additional_option_value.photos.published.any?
+      = render 'products/includes/image_gallery_show_product_page', photos: @additional_option_value.photos.published
+    - else
+      = render 'products/includes/image_gallery_show_product_page', photos: resource.photos.published if resource.photos.published.any?
 
-    .b-product-short-info
-      = price_with_discount(resource)
-      .b-product-ratable-with-reviews
-        .ratable.read_only{ data: { score: resource.average_score } }
-        = link_to t('views.product.reviews_count',
-          count: resource.published_reviews_count),
-          product_path(resource, anchor: 'reviews'),
-          class: 'reviews-count'
+    .b-product-middle
+      - if @additional_options.any?
+        .l-additional-options
+          = render @additional_options
 
-      = render 'products/includes/stores', stores: @stores, product: resource if @stores.present?
+      .b-product-short-info
+        - if @product_new_values.present? && (@product_new_values.with_price.any? || @product_new_values.with_discount.any?)
+          - if @product_new_values.with_price.any?
+            = price_with_discount(*resource.new_price_with_discount(@product_new_values.with_price.first.new_value.to_i))
+          - else
+            = price_with_discount(resource.price, resource.price_with_discount(@product_new_values.with_discount.new_value))
+        - else
+          = price_with_discount(resource.price, resource.price_with_discount)
+
+        .b-product-ratable-with-reviews
+          .ratable.read_only{ data: { score: resource.average_score } }
+          = link_to t('views.product.reviews_count',
+            count: resource.published_reviews_count),
+            product_path(resource, anchor: 'reviews'),
+            class: 'reviews-count'
+
+        = render 'products/includes/stores', stores: @stores, product: resource if @stores.present?
 
     .b-commerce
       %ul
@@ -25,7 +45,11 @@
           %li= add_to_wishlist(resource)
   .b-product-description
     %h4= t('about_good')
-    %p= raw resource.description
+    %p.default.product-description
+      - if @product_new_values.present? && @product_new_values.with_description.any?
+        = @product_new_values.with_description.first.new_value
+      - else
+        = raw resource.description
 
   .b-product-tabs.tabs
     %ul
