hotfix: Resolve problem with creating versions for photos

--- a/app/views/products/includes/_image_gallery_show_product_page.html.haml
+++ b/app/views/products/includes/_image_gallery_show_product_page.html.haml
@@ -1,6 +1,6 @@
 .b-product-images.default
   - photos.each_with_index do |photo, i|
     - if i == 0
-      .e-main-image{ style: "background-image: url(#{ photo.file_url(:product) });" }
+      .e-main-image{ style: "background-image: url(#{ photo.file.url(:product) });" }
 
-    .e-thumb-image{ style: "background-image: url(#{ photo.file_url(:product, :thumb) });", data: { big_img_url: photo.file_url(:product) } }
+    .e-thumb-image{ style: "background-image: url(#{ photo.file.url(:product, :thumb) });", data: { big_img_url: photo.file.url(:product) } }
