change select2 styles path [ci skip]

--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -1,6 +1,6 @@
 @import "active_admin/mixins";
 @import "active_admin/base";
-@import "active_admin/select2/base";
+@import "select2";
 
 td span.icon, p span.icon {
   width: 1.8em;
