refactoring for wishlists

--- a/app/views/shared/_banner.html.haml
+++ b/app/views/shared/_banner.html.haml
@@ -3,4 +3,4 @@
   = image_tag 'banner.jpg'
 
   .sale
-    = link_to 'Sale', [:sale, :product_categories]
+    = link_to t('sale'), [:sale, :product_categories]
