--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -2,12 +2,12 @@
   .row.our-products
     .container
       %h2
-        Наша продукция
+        = t('our_production')
         %span.icons-arrow-black-down
-      - if @product_categories.present?
+      - if @front_presenter.product_categories.any?
         %ul.menu
           %li= link_to t('sale'), [:sale, :product_categories], class: 'pink'
-          = build_product_category_ancestry_tree(@product_categories)
+          = build_product_category_ancestry_tree(@front_presenter.product_categories)
 
   .row.dark-gray-bg
     .container
